--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "nitewatch",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Watch for file changes and run scripts easily",
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "test": "eslint src/index.js && mocha"
+    "test": "eslint src/*.js && mocha"
   },
   "bin": {
     "nitewatch": "./bin/nitewatch-global.js"
@@ -19,7 +19,9 @@
   },
   "dependencies": {
     "command-line-args": "^5.0.2",
+    "fs-walk": "0.0.2",
     "js-yaml": "^3.12.0",
-    "md5": "^2.2.1"
+    "md5": "^2.2.1",
+    "minimatch": "^3.0.4"
   }
 }
